Fix file loading and handle empty storage files